[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Good brush 100.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/UI/Lose.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/Inherited/ButtonRestart.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/Inherited/ButtonQuitToMenu.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Buttons"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/HBoxContainer/Restart:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.721569, 0 ), Color( 1, 1, 0.721569, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/CenterContainer/HBoxContainer/Quit:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 0.721569, 0 ), Color( 1, 1, 0.721569, 1 ) ]
}

[node name="Lose" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 426.0
margin_top = 193.0
margin_right = 798.0
margin_bottom = 551.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="CanvasLayer/CenterContainer/HBoxContainer"]
margin_right = 372.0
margin_bottom = 122.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Busted !"

[node name="Restart" parent="CanvasLayer/CenterContainer/HBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
modulate = Color( 1, 1, 0.721569, 0 )
margin_left = 58.0
margin_top = 172.0
margin_right = 313.0
margin_bottom = 240.0
rect_min_size = Vector2( 255, 68 )

[node name="Quit" parent="CanvasLayer/CenterContainer/HBoxContainer" instance=ExtResource( 4 )]
unique_name_in_owner = true
modulate = Color( 1, 1, 0.721569, 0 )
margin_left = 58.0
margin_top = 290.0
margin_right = 313.0
margin_bottom = 358.0
rect_min_size = Vector2( 255, 68 )

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/Buttons = SubResource( 1 )

[connection signal="visibility_changed" from="." to="." method="_on_Lose_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
